--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>聯邦銀行｜信用卡</title>
+    <meta name="description" content="線上辦卡" />
+    <meta name="author" content="聯邦銀行">
+    <meta property="og:image" content="https://card.ubot.com.tw/FB.jpg" />
   </head>
   <body>
     <noscript>
